# cpp-blasted-surface

./: Anmerkungen-Thomas-10-10-2024.txt  Planung.odg  TODO.txt  robot-notes.md
data/artificial/part1/: part1.blend  part1.blend1  scan_frames_2_to_2.las  scan_frames_2_to_2_noise.las  scan_frames_2_to_2_noise_parts.las  scan_frames_2_to_2_parts.las
data/artificial/part2/: part2.blend  part2.blend1  scan_frames_2_to_2.las  scan_frames_2_to_2_noise.las  scan_frames_2_to_2_noise_parts.las  scan_frames_2_to_2_parts.las
source/: CMakeLists.txt  CMakePresets.json  add_shaders.cmake  vcpkg.json
source/aco/: CMakeLists.txt
source/core/: CMakeLists.txt
source/core/include/: graph.h  node.h
source/core/include/blast/: ant_colony_optimizer.hpp  detected_plane_segment.hpp  graph.h  graph.hpp  greedy_optimizer.hpp  log.hpp  node.hpp  optimizer_strategy.hpp  ordered_optimizer.hpp  point_cloud.h  point_cloud.hpp  three_point_optimizer.hpp  utility.hpp  voxel_grid.hpp
source/core/include/blast/planes/: boundary_volume_hierarchy.hpp  bounding_box.hpp  disjoint_set.hpp  octree_depth_indexable.hpp  oliveira_planes.hpp  planar_patch.hpp  plane_detector.hpp  segmenter.hpp  segmenter_utility.hpp
source/core/include/blast/sampler/: grid_sampler.hpp
source/core/src/: ant_colony_optimizer.cpp  graph.cpp  greedy_optimizer.cpp  node.cpp  ordered_optimizer.cpp  point_cloud.cpp  three_point_optimizer.cpp  voxel_grid.cpp
source/core/src/planes/: boundary_volume_hierarchy.cpp  bounding_box.cpp  disjoint_set.cpp  octree_depth_indexable.cpp  oliveira_planes.cpp  planar_patch.cpp  plane_detector.cpp  segmenter_utility.cpp
source/core/src/sampler/: grid_sampler.cpp
source/core/tests/: ant_colony_optimizer.test.cpp  graph.test.cpp  point_cloud.test.cpp  setup.cpp
source/editor/: CMakeLists.txt
source/editor/src/: editor.cpp
source/meshview/: CMakeLists.txt  example.cpp
source/meshview/include/meshview/: common.hpp  meshview.hpp  meshview_imgui.hpp  util.hpp
source/meshview/include/meshview/internal/: shader.hpp  shader_inline.hpp
source/meshview/src/: camera.cpp  mesh.cpp  shader.cpp  texture.cpp  util.cpp  viewer.cpp
source/playground/: CMakeLists.txt
source/playground/src/: playground.cpp
source/segment_planes/: CMakeLists.txt
source/segment_planes/include/blast/: boundary_volume_hierarchy.hpp  bounding_box.hpp  disjoint_set.hpp  octree_depth_indexable.hpp  oliveira_planes.hpp  planar_patch.hpp  plane_detector.hpp  segmenter.hpp  segmenter_utility.hpp
source/segment_planes/src/: boundary_volume_hierarchy.cpp  bounding_box.cpp  disjoint_set.cpp  octree_depth_indexable.cpp  oliveira_planes.cpp  planar_patch.cpp  plane_detector.cpp  segmenter_utility.cpp
source/tool/: CMakeLists.txt
source/tool/examples/: digital_example_2.pcd  digital_example_noise.pcd  karosserie-xinv.toml  norm-xinv.toml  pyramide-scan.pcd  runde-spitzen-xinv.toml  rundteil-normal-alt.toml  rundteil-normal.toml  spitze-runden-alt.toml  stumpfe-pyramide-xinv.toml
source/tool/include/blast/: common.hpp  meshview.hpp  tool.hpp  tool_imgui.hpp  util.hpp
source/tool/include/blast/internal/: shader.hpp  shader_inline.hpp
source/tool/src/: camera.cpp  debug.cpp  debug.hpp  detected_plane_segment.hpp  mesh.cpp  path_node.hpp  pipeline.cpp  pipeline.hpp  shader.cpp  startup.cpp  texture.cpp  tool.cpp  tool.hpp  util.cpp  viewer.cpp
source/visualizer/: CMakeLists.txt
source/visualizer/include/: visualizer.h
source/visualizer/include/blast/: visualizer.h  visualizer.hpp
source/visualizer/src/: main.cpp  visualizer.cpp
source/vulkanizer/: CMakeLists.txt
source/vulkanizer/include/: vk_descriptors.hpp  vk_engine.hpp  vk_init.hpp  vk_initializers.hpp  vk_pipelines.hpp  vk_renderer.hpp  vk_types.hpp  vulkan_ext_functions.h  vulkan_renderer.h  vulkan_renderer.hpp  vulkanizer.hpp
source/vulkanizer/shaders/: shader.vert
source/vulkanizer/src/: VkBootstrap.cpp  VkBootstrapDispatch.h  main.cpp  vk_descriptors.cpp  vk_engine.cpp  vk_ext_functions.cpp  vk_images.cpp  vk_init.cpp  vk_initializers.cpp  vk_pipelines.cpp  vk_renderer.cpp  vulkan_ext_functions.cpp  vulkan_renderer.cpp  vulkanizer.cpp
